--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "format": "prettier --write ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
